# streamlit-mcp-app

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: pages.toml
app/config/: servers.json  settings.json
app/core/: config.py  models.py  ollama.py
app/mcp/: client.py
app/pages/: 0_assistant.py  1_settings.py
mcp_servers/: calculator.py  github.py  server.py
