[project]
name = "ai-assistant-mcp"
version = "0.1.0"
description = "AI Assistant with MCP Servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama==0.6.1",
    "streamlit>=1.33.0",
    "streamlit-js-eval==0.1.7",
    "st-pages==1.0.1",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

